@@ -1,3 +1,7 @@
+2014-12-15  Asterisk Development Team <asteriskteam@digium.com>
+
+	* Asterisk 11.15.0 Released.
+
 2014-12-10  Asterisk Development Team <asteriskteam@digium.com>
 
 	* Asterisk 11.15.0-rc2 Released.
